--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled",
+  "name": "sendmailapp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,5 +11,18 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brachu21/SendMailAPP.git"
+  },
+  "author": "brach",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/brachu21/SendMailAPP/issues"
+  },
+  "homepage": "https://github.com/brachu21/SendMailAPP#readme",
+  "description": ""
 }
